# AB_test

./: README.md  pyproject.toml
notebook/: 001_Bayesian_AB_Testing(Basic).ipynb  002_Bayesian_AB_Testing(MCMC).ipynb  003_1_NumPyro_基礎コード解説.ipynb  003_2_基礎コード(野菜の種).ipynb  003_NumPyro_基礎コード解説.ipynb  004_NumPyro_Sample実行(CV_CNT).ipynb  004_NumPyro_Sample実行.ipynb  005_NumPyro_Sample実行(CVR).ipynb  006_numpyroに慣れるためのノート.ipynb  006_writing.ipynb  007_01_ベイズ回帰_線形予測子.ipynb  007_02_ロジスティック回帰.ipynb  007_03_ポワソン回帰.ipynb  007_ベイズ回帰.ipynb  008_一般化線形混合モデル（GLMM）.ipynb  Bayesian_AB_Testing.ipynb  NumPyro_基礎.ipynb  NumPyro_基礎コード解説.ipynb  README.md  gen_sample_data.ipynb
notebook/data/: poisson_ng_idata_base.nc
